--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script defer src="bundle.js"></script>
-</head>
+<script defer src="bundle.js"></script></head>
 
 <body>
     <div class="top-bar"></div>
